change slider wrong parts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </h2>
 
       <!-- Carousel  -->
-      <div class="slider">
+      <div class="slider mr-5">
         <div class="list">
           <div class="item">
             <img src="./assets/images/carousel_1.png" />
