--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
       <nav class="nav bd-grid">
         <!-- Logo  -->
         <div>
-          <p class="font-great-vibes text-xl lg:text-4xl text-red-800">
-            <a href="#home">Deevana Art</a>
-          </p>
+          <a href="#home">
+            <img
+              src="./assets/images/logo.png"
+              alt="logo"
+              class="w-[120px] lg:w-[150px]"
+          /></a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -52,10 +55,14 @@
               <a href="#services" class="nav__link">Services</a>
             </li>
             <li class="nav__item">
-              <a href="./gallery.html" class="nav__link">Gallery</a>
+              <a
+                href="https://www.instagram.com/deevana_art?igsh=MXZ1aHpnOHNicG5meg=="
+                class="nav__link"
+                >Gallery</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#contact" class="nav__link">Contact</a>
+              <a href="#appointment" class="nav__link">Appointment</a>
             </li>
           </ul>
         </div>
@@ -70,10 +77,6 @@
     <main
       id="home"
       class="container pt-20 lg:pt-32 lg:pb-10 px-6 mx-auto overflow-hidden">
-      <h2 class="text-2xl font-great-vibes text-center lg:text-3xl">
-        What’s HOT?
-      </h2>
-
       <!-- Carousel -->
       <div class="slider">
         <div class="list">
@@ -111,10 +114,10 @@
       </div>
 
       <!-- Top Venues -->
-      <button
+      <!-- <button
         class="flex border-2 border-[#0d1730] my-10 py-3 px-5 mx-auto hover:text-white hover:bg-[#0d1730] transition-all duration-150">
         See More Top Venues
-      </button>
+      </button> -->
     </main>
 
     <hr class="h-[2px] bg-[#0d1730] my-5 mx-5 lg:my-10 lg:mx-32 lg:mt-0x" />
@@ -122,7 +125,7 @@
     <!-- ====== About Section Start -->
     <section
       id="about"
-      class="container px-10 lg:px-32 overflow-hidden pb-0 lg:pt-[50px] lg:pb-[90px] bg-white dark:bg-dark">
+      class="mx-auto container px-10 lg:px-32 overflow-hidden pb-0 lg:pt-[50px] lg:pb-[90px] bg-white dark:bg-dark">
       <h2
         class="text-2xl font-great-vibes text-center lg:text-4xl my-7 lg:mt-0 lg:mb-5">
         Why Choose Us
@@ -690,7 +693,7 @@
     <hr class="h-[2px] bg-[#0d1730] my-5 mx-5 lg:my-10 lg:mx-32 lg:mt-0x" />
 
     <!--===== Our Services =====-->
-    <div id="services" class="container px-10 lg:px-32 my-8 lg:my-16">
+    <div id="services" class="mx-auto container px-10 lg:px-32 my-8 lg:my-16">
       <h2 class="text-3xl font-great-vibes text-center lg:text-5xl">
         Our Services
       </h2>
@@ -699,7 +702,8 @@
       <div class="container my-12 mx-auto px-4 md:px-12">
         <div class="flex flex-wrap -mx-1 lg:-mx-4">
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
@@ -724,7 +728,8 @@
           <!-- END Column -->
 
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
@@ -749,13 +754,14 @@
           <!-- END Column -->
 
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
                 <img
                   alt="Birthdays"
-                  class="block h-full lg:h-[250px] w-full"
+                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
                   src="./assets/images/service_3.jpg" />
               </a>
 
@@ -774,13 +780,14 @@
           <!-- END Column -->
 
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
                 <img
                   alt="Service 4"
-                  class="block h-full lg:h-[250px] w-full"
+                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
                   src="./assets/images/service_4.jpeg" />
               </a>
 
@@ -799,13 +806,14 @@
           <!-- END Column -->
 
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
                 <img
                   alt="Gender Parties"
-                  class="block h-full lg:h-[250px] w-full"
+                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
                   src="./assets/images/service_5.jpg" />
               </a>
 
@@ -824,13 +832,14 @@
           <!-- END Column -->
 
           <!-- Column -->
-          <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
+          <div
+            class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
               <a href="#">
                 <img
                   alt="Anniversaries"
-                  class="block h-full lg:h-[250px] w-full"
+                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
                   src="./assets/images/service_6.png" />
               </a>
 
@@ -854,7 +863,7 @@
     <hr class="h-[2px] bg-[#0d1730] my-5 mx-5 lg:my-10 lg:mx-32" />
 
     <!--===== Contacts =====-->
-    <div id="contact" class="mt-10 lg:my-10">
+    <!-- <div id="contact" class="mt-10 lg:my-10">
       <h2 class="text-3xl my-10 font-great-vibes text-center lg:text-5xl">
         Contacts
       </h2>
@@ -1004,6 +1013,146 @@
           </div>
         </div>
       </div>
+    </div> -->
+
+    <!--===== Appointment =====-->
+    <div id="appointment">
+      <h2 class="text-3xl mt-10 font-great-vibes text-center lg:text-5xl">
+        Appointment
+      </h2>
+      <div class="flex items-center justify-center p-12">
+        <!-- Author: FormBold Team -->
+        <!-- Learn More: https://formbold.com -->
+        <div class="mx-auto w-full max-w-[550px] bg-white">
+          <form action="#" method="POST">
+            <div class="mb-5">
+              <label
+                for="name"
+                class="mb-3 block text-base font-medium text-[#07074D]">
+                Full Name
+              </label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Full Name"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5">
+              <label
+                for="phone"
+                class="mb-3 block text-base font-medium text-[#07074D]">
+                Phone Number
+              </label>
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                placeholder="Enter your phone number"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5">
+              <label
+                for="email"
+                class="mb-3 block text-base font-medium text-[#07074D]">
+                Email Address
+              </label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter your email"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="-mx-3 flex flex-wrap">
+              <div class="w-full px-3 sm:w-1/2">
+                <div class="mb-5">
+                  <label
+                    for="date"
+                    class="mb-3 block text-base font-medium text-[#07074D]">
+                    Date
+                  </label>
+                  <input
+                    type="date"
+                    name="date"
+                    id="date"
+                    class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                </div>
+              </div>
+              <div class="w-full px-3 sm:w-1/2">
+                <div class="mb-5">
+                  <label
+                    for="time"
+                    class="mb-3 block text-base font-medium text-[#07074D]">
+                    Time
+                  </label>
+                  <input
+                    type="time"
+                    name="time"
+                    id="time"
+                    class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-5 pt-3">
+              <label
+                class="mb-5 block text-base font-semibold text-[#07074D] sm:text-xl">
+                Address Details
+              </label>
+              <div class="-mx-3 flex flex-wrap">
+                <div class="w-full px-3 sm:w-1/2">
+                  <div class="mb-5">
+                    <input
+                      type="text"
+                      name="area"
+                      id="area"
+                      placeholder="Enter area"
+                      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                  </div>
+                </div>
+                <div class="w-full px-3 sm:w-1/2">
+                  <div class="mb-5">
+                    <input
+                      type="text"
+                      name="city"
+                      id="city"
+                      placeholder="Enter city"
+                      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                  </div>
+                </div>
+                <div class="w-full px-3 sm:w-1/2">
+                  <div class="mb-5">
+                    <input
+                      type="text"
+                      name="state"
+                      id="state"
+                      placeholder="Enter state"
+                      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                  </div>
+                </div>
+                <div class="w-full px-3 sm:w-1/2">
+                  <div class="mb-5">
+                    <input
+                      type="text"
+                      name="post-code"
+                      id="post-code"
+                      placeholder="Post Code"
+                      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div>
+              <button
+                class="hover:shadow-form w-full rounded-md bg-[#6A64F1] py-3 px-8 text-center text-base font-semibold text-white outline-none">
+                Book Appointment
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
 
     <!-- ====== Footer Section Start -->
@@ -1014,31 +1163,22 @@
         <a class="hover:text-gray-900" href="#about">About</a>
         <a class="hover:text-gray-900" href="#services">Services</a>
         <a class="hover:text-gray-900" href="#gallery">Gallery</a>
-        <a class="hover:text-gray-900" href="#contact">Contact</a>
+        <a class="hover:text-gray-900" href="#appointment">Appointment</a>
       </nav>
 
       <div class="flex justify-center space-x-5">
         <a
-          href="https://facebook.com"
+          href="https://www.facebook.com/profile.php?id=100064507370340&mibextid=ZbWKwL"
           target="_blank"
           rel="noopener noreferrer">
           <img src="https://img.icons8.com/fluent/30/000000/facebook-new.png" />
         </a>
         <a
-          href="https://linkedin.com"
-          target="_blank"
-          rel="noopener noreferrer">
-          <img src="https://img.icons8.com/fluent/30/000000/linkedin-2.png" />
-        </a>
-        <a
-          href="https://instagram.com"
+          href="https://www.instagram.com/deevana_art?igsh=MXZ1aHpnOHNicG5meg=="
           target="_blank"
           rel="noopener noreferrer">
           <img
             src="https://img.icons8.com/fluent/30/000000/instagram-new.png" />
-        </a>
-        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
-          <img src="https://img.icons8.com/fluent/30/000000/twitter.png" />
         </a>
       </div>
       <p class="text-center text-gray-700 font-medium">
@@ -1049,7 +1189,8 @@
 
     <!-- Back to Top Start -->
     <a
-      class="fixed bottom-4 right-4 z-[9999] hidden h-7 w-7 lg:h-14 lg:w-14 justify-center items-center rounded-full bg-black p-4 hover:animate-pulse"
+      href="#home"
+      class="fixed bottom-4 right-4 z-[9999] hidden h-7 w-7 lg:h-14 lg:w-14 justify-center items-center rounded-full bg-black p-4 hover:animate-pulse cursor-pointer"
       id="to-top">
       <span class="block">
         <i class="fa-solid fa-chevron-up text-white"></i>
