--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
+          <ul class="nav__list md:flex md:items-center">
             <li class="nav__item">
               <a href="#home" class="nav__link">Home</a>
             </li>
@@ -62,7 +62,21 @@
               >
             </li>
             <li class="nav__item">
-              <a href="#appointment" class="nav__link">Appointment</a>
+              <!-- <a href="#appointment" class="nav__link">Appointment</a> -->
+              <!-- <a href="#appointment" class="custom-btn btn-12"
+                ><span>Book!</span><span>Appointment</span></a
+              > -->
+              <div class="relative inline-flex group">
+                <div
+                  class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt"></div>
+                <a
+                  href="#appointment"
+                  title="Get quote now"
+                  class="relative inline-flex items-center justify-center px-8 py-4 text-base font-semibold lg:text-lg lg:font-bold text-white transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
+                  role="button"
+                  >Book Appointment
+                </a>
+              </div>
             </li>
           </ul>
         </div>
