--- a/index.html
+++ b/index.html
@@ -62,21 +62,7 @@
               >
             </li>
             <li class="nav__item">
-              <!-- <a href="#appointment" class="nav__link">Appointment</a> -->
-              <!-- <a href="#appointment" class="custom-btn btn-12"
-                ><span>Book!</span><span>Appointment</span></a
-              > -->
-              <div class="relative inline-flex group">
-                <div
-                  class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt"></div>
-                <a
-                  href="#appointment"
-                  title="Get quote now"
-                  class="relative inline-flex items-center justify-center px-8 py-4 text-base font-semibold lg:text-lg lg:font-bold text-white transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
-                  role="button"
-                  >Book Appointment
-                </a>
-              </div>
+              <a href="#" class="nav__link">Invitation</a>
             </li>
           </ul>
         </div>
@@ -95,16 +81,40 @@
       <div class="slider">
         <div class="list">
           <div class="item">
-            <img src="./assets/images/carousel_1.png" />
+            <img src="./assets/images/slide-01.jpg" />
           </div>
           <div class="item">
-            <img src="./assets/images/carousel_2.png" />
+            <img src="./assets/images/slide-02.jpg" />
           </div>
           <div class="item">
-            <img src="./assets/images/carousel_3.png" />
+            <img src="./assets/images/slide-03.jpg" />
           </div>
           <div class="item">
-            <img src="./assets/images/carousel_4.png" />
+            <img src="./assets/images/slide-04.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-05.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-06.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-07.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-08.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-09.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-10.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-11.jpg" />
+          </div>
+          <div class="item">
+            <img src="./assets/images/slide-12.jpg" />
           </div>
         </div>
 
@@ -119,19 +129,28 @@
         </div>
 
         <!-- dots -->
-        <ul class="dots">
+        <!-- <ul class="dots">
           <li class="active"></li>
           <li></li>
           <li></li>
           <li></li>
-        </ul>
+        </ul> -->
       </div>
 
       <!-- Top Venues -->
-      <!-- <button
-        class="flex border-2 border-[#0d1730] my-10 py-3 px-5 mx-auto hover:text-white hover:bg-[#0d1730] transition-all duration-150">
-        See More Top Venues
-      </button> -->
+      <button class="flex mt-10 py-3 px-5 mx-auto">
+        <div class="relative inline-flex group">
+          <div
+            class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt"></div>
+          <a
+            href="#appointment"
+            title="Get quote now"
+            class="relative inline-flex items-center justify-center px-8 py-4 text-base font-semibold lg:text-lg lg:font-bold text-white transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
+            role="button"
+            >Book Appointment
+          </a>
+        </div>
+      </button>
     </main>
 
     <hr class="h-[2px] bg-[#0d1730] my-5 mx-5 lg:my-10 lg:mx-32 lg:mt-0x" />
@@ -151,13 +170,13 @@
               <div class="w-full px-3 sm:px-4 xl:w-1/2">
                 <div class="py-3 sm:py-4">
                   <img
-                    src="https://cdn.tailgrids.com/2.0/image/marketing/images/about/about-01/image-1.jpg"
+                    src="./assets/images/whychooseus1.jpg"
                     alt=""
                     class="w-full rounded-2xl" />
                 </div>
                 <div class="py-3 sm:py-4">
                   <img
-                    src="https://cdn.tailgrids.com/2.0/image/marketing/images/about/about-01/image-2.jpg"
+                    src="./assets/images/whychooseus2.jpg"
                     alt=""
                     class="w-full rounded-2xl" />
                 </div>
@@ -165,7 +184,7 @@
               <div class="w-full px-3 sm:px-4 xl:w-1/2">
                 <div class="relative z-10 my-4">
                   <img
-                    src="https://cdn.tailgrids.com/2.0/image/marketing/images/about/about-01/image-3.jpg"
+                    src="./assets/images/whychooseus3.jpg"
                     alt=""
                     class="w-full rounded-2xl" />
                   <span class="absolute -right-7 -bottom-7 z-[-1]">
@@ -723,8 +742,8 @@
               <a href="#">
                 <img
                   alt="Weddings"
-                  class="block h-full lg:h-[250px] w-full"
-                  src="./assets/images/service_1.png" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/wedding.jpg" />
               </a>
 
               <header
@@ -749,8 +768,8 @@
               <a href="#">
                 <img
                   alt="Engagements"
-                  class="block h-full lg:h-[250px] w-full"
-                  src="./assets/images/service_2.png" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/engagement.jpg" />
               </a>
 
               <header
@@ -775,8 +794,8 @@
               <a href="#">
                 <img
                   alt="Birthdays"
-                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
-                  src="./assets/images/service_3.jpg" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/birthday.jpg" />
               </a>
 
               <header
@@ -801,8 +820,8 @@
               <a href="#">
                 <img
                   alt="Service 4"
-                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
-                  src="./assets/images/service_4.jpeg" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/bridal-shower.jpg" />
               </a>
 
               <header
@@ -827,8 +846,8 @@
               <a href="#">
                 <img
                   alt="Gender Parties"
-                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
-                  src="./assets/images/service_5.jpg" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/gender-parties.jpg" />
               </a>
 
               <header
@@ -853,8 +872,8 @@
               <a href="#">
                 <img
                   alt="Anniversaries"
-                  class="block h-full md:h-[200px] lg:h-[250px] w-full"
-                  src="./assets/images/service_6.png" />
+                  class="block h-[200px] lg:h-[250px] w-full object-cover"
+                  src="./assets/images/anniversaries.jpg" />
               </a>
 
               <header
@@ -1185,14 +1204,19 @@
           href="https://www.facebook.com/profile.php?id=100064507370340&mibextid=ZbWKwL"
           target="_blank"
           rel="noopener noreferrer">
-          <img src="https://img.icons8.com/fluent/30/000000/facebook-new.png" />
+          <i class="text-2xl fa-brands fa-facebook"></i>
         </a>
         <a
           href="https://www.instagram.com/deevana_art?igsh=MXZ1aHpnOHNicG5meg=="
           target="_blank"
           rel="noopener noreferrer">
-          <img
-            src="https://img.icons8.com/fluent/30/000000/instagram-new.png" />
+          <i class="text-2xl fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/deevana_art?igsh=MXZ1aHpnOHNicG5meg=="
+          target="_blank"
+          rel="noopener noreferrer">
+          <i class="text-2xl fa-brands fa-telegram"></i>
         </a>
       </div>
       <p class="text-center text-gray-700 font-medium">
