--- a/index.html
+++ b/index.html
@@ -127,14 +127,6 @@
             <i class="fa-solid fa-chevron-right"></i>
           </button>
         </div>
-
-        <!-- dots -->
-        <!-- <ul class="dots">
-          <li class="active"></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul> -->
       </div>
 
       <!-- Top Venues -->
@@ -732,26 +724,26 @@
       </h2>
 
       <!-- Cards  -->
-      <div class="container my-12 mx-auto px-4 md:px-12">
+      <div class="container mt-6 mb-12 mx-auto px-4 md:px-12">
         <div class="flex flex-wrap -mx-1 lg:-mx-4">
           <!-- Column -->
           <div
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Weddings"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/wedding.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Weddings"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/wedding.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Weddings
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Weddings
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
@@ -765,19 +757,19 @@
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Engagements"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/engagement.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Engagements"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/engagement.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Engagements
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Engagements
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
@@ -791,19 +783,19 @@
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Birthdays"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/birthday.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Birthdays"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/birthday.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Birthdays
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Birthdays
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
@@ -817,19 +809,19 @@
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Service 4"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/bridal-shower.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Service 4"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/bridal-shower.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Bridal Showers
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Bridal Showers
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
@@ -843,19 +835,19 @@
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Gender Parties"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/gender-parties.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Gender Parties"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/gender-parties.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Gender Parties
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Gender Parties
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
@@ -869,19 +861,19 @@
             class="my-1 md:my-3 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3">
             <!-- Article -->
             <article class="overflow-hidden rounded-lg shadow-lg">
-              <a href="#">
-                <img
-                  alt="Anniversaries"
-                  class="block h-[200px] lg:h-[250px] w-full object-cover"
-                  src="./assets/images/anniversaries.jpg" />
-              </a>
+              <!-- <a href="#"> -->
+              <img
+                alt="Anniversaries"
+                class="block h-[200px] lg:h-[250px] w-full object-cover"
+                src="./assets/images/anniversaries.jpg" />
+              <!-- </a> -->
 
               <header
                 class="flex items-center justify-between leading-tight p-2 md:p-4">
                 <h1 class="text-lg">
-                  <a class="no-underline hover:underline text-black" href="#">
-                    Anniversaries
-                  </a>
+                  <!-- <a class="no-underline hover:underline text-black" href="#"> -->
+                  Anniversaries
+                  <!-- </a> -->
                 </h1>
                 <!-- <p class="text-grey-darker text-sm">11/1/19</p> -->
               </header>
