add styles to links

--- a/index.html
+++ b/index.html
@@ -913,7 +913,8 @@
               planning your special day!
             </p>
             <ul class="mt-12 space-y-8">
-              <li>
+              <li
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
@@ -933,7 +934,8 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
@@ -953,7 +955,8 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
