--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
             </p>
             <ul class="mt-12 space-y-8">
               <li
-                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-72 lg:w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
@@ -935,7 +935,7 @@
                 </a>
               </li>
               <li
-                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-72 lg:w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
@@ -956,7 +956,7 @@
                 </a>
               </li>
               <li
-                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-96">
+                class="bg-[#a91079] hover:bg-[#a91079e2] rounded-lg py-2 px-4 w-72 lg:w-96">
                 <a
                   class="flex items-center"
                   target="_blank"
