--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet" />
 
     <!-- Favicon Logo  -->
-    <link rel="icon" type="image/x-icon" href="/assets/images/logo.svg" />
+    <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg" />
 
     <!-- Link Style CSS  -->
     <link rel="stylesheet" href="./assets/css/output.css" />
